--- a/CursoArquitetura/Arquitetura.OOP/Arquitetura.OOP.csproj
+++ b/CursoArquitetura/Arquitetura.OOP/Arquitetura.OOP.csproj
@@ -44,11 +44,17 @@
   <ItemGroup>
     <Compile Include="1 - Base\Pessoa.cs" />
     <Compile Include="2 - Heranca\Funcionario.cs" />
+    <Compile Include="3 - Abstracao\Eletrodomestico.cs" />
+    <Compile Include="4 - Polimorfismo\CafeteiraEspressa.cs" />
+    <Compile Include="5 - Encapsulamento\AutomacaoCafe.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Anotações.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
