Finalizando principios da OO

--- a/CursoArquitetura/Arquitetura.OOP/Arquitetura.OOP.csproj
+++ b/CursoArquitetura/Arquitetura.OOP/Arquitetura.OOP.csproj
@@ -47,6 +47,9 @@
     <Compile Include="3 - Abstracao\Eletrodomestico.cs" />
     <Compile Include="4 - Polimorfismo\CafeteiraEspressa.cs" />
     <Compile Include="5 - Encapsulamento\AutomacaoCafe.cs" />
+    <Compile Include="7 - Interface VS Implementacao\InterfaceVsImplementacao.cs" />
+    <Compile Include="7 - Interface VS Implementacao\IRepositorio.cs" />
+    <Compile Include="7 - Interface VS Implementacao\Repositorio.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -55,6 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Anotações.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="6 - Heranca VS Composicao\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
